logs/devilsworkshop.log
Listing '.'...
Listing './bin'...
Listing './data'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/devilsworkshop'...
Compiling './lib/python3.5/site-packages/devilsworkshop/controller.py'...
***   File "./lib/python3.5/site-packages/devilsworkshop/controller.py", line 5
    print "er"
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/devilsworkshop/foo'...
Compiling './lib/python3.5/site-packages/devilsworkshop/foo/pkg_foo.py'...
***   File "./lib/python3.5/site-packages/devilsworkshop/foo/pkg_foo.py", line 5
    print "blah blah"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/devilsworkshop-1.0.7.egg-info'...
Compiling './lib/python3.5/site-packages/mod_foo.py'...
***   File "./lib/python3.5/site-packages/mod_foo.py", line 5
    print "Foo Fucking Bar"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
